Reparado el servicio de creación de PDFs, preparando reparación de subidas y peticiones de imágenes con Cloudinary.